<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/signup"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_sign_up"
        android:text="@string/text_new_user"
        android:textColor="@color/white"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        style="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_full_name"
                android:inputType="text"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_full_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawableRight="@drawable/ic_full_name"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/editText_email"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_email"
                android:inputType="textEmailAddress"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawableRight="@drawable/ic_email"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/editText_user_name"
                />



            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_user_name"
                android:inputType="text"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_user_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawableRight="@drawable/ic_person"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/editText_password_sign_up"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_password_sign_up"
                android:inputType="textPassword"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawableRight="@drawable/ic_password"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/progressBarSignUp"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarSignUp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button_sign_up"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/button_sign_up"
                android:text="@string/text_sign_up"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="12dp"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_normal"
                app:layout_constraintBottom_toTopOf="@id/linear_layout_bottom_signup"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linear_layout_bottom_signup"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_already"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:text="@string/already_have_an_account_login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>