<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <androidx.appcompat.widget.AppCompatImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@drawable/restaurant"
      android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_slogan"
                android:text="@string/app_slogan"
                android:textColor="@color/white"
                android:textStyle="italic|bold"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/editText_email_login"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_email_login"
                android:inputType="textEmailAddress"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:drawableRight="@drawable/ic_email"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/editText_password_login"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_password_login"
                android:inputType="textPassword"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/text_password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:background="@drawable/bg_edit_normal"
                android:imeOptions="actionDone"
                android:drawableRight="@drawable/ic_password"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/progressBarLogin"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarLogin"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button_log_in"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/button_log_in"
                android:text="@string/text_log_in"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                android:textColor="@color/white"

                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="24dp"

                android:background="@drawable/bg_button_normal"
                app:layout_constraintBottom_toTopOf="@+id/linear_layout_bottom"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linear_layout_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/text_forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_new_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:text="@string/text_new_user"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>